--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
 </head>
 
 <body>
-  
   <table>
     <tr>
       <td><img src="https://pbs.twimg.com/profile_images/1382298879060631560/G_6xvTdg_400x400.jpg" alt="Photo of Vivek Baluwale"></td>
       <td><h1> Vivek Baluwale</h1>
-      <p><em>Founder and President of <strong><a href="https://scansociety.wordpress.com/">scan society</a></strong></em></p>
-      <p><strong>Scan society</strong> , which is an non-profit organisaton</p>
+      <p><em><b>Founder of </b></em> Scan Society Educational and Charitable Trust</p>
+      <p><em><b>Executive Lead </b></em> at Fun&Learn</p>
       </td>
     </tr>
-    <tr>
-      <td><em><b>Executive Lead</b></em> at Fun&Learn</td>
-    </tr>
+    <b>President of </b>
   </table>
 
 <hr>
